[package]
name = "yew-weather"
version = "0.1.0"
authors = ["Philipp Hoenisch <philipp@hoenisch.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.5"
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.15"
wasm-timer = "0.2.4"
serde_json = "1.0"
js-sys = "0.3.42"
log = "0.4.8"
rand = { version = "0.7", features = ["wasm-bindgen"] }
load-dotenv = "0.1.1"
yew = { git = "https://github.com/yewstack/yew", features = ["web_sys"] }
yewtil = { git = "https://github.com/yewstack/yew", features = ["fetch","pure"] }
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'Node',
  'Window',
  "console",
  "Url"
]
