[package]
name = "yew-weather"
version = "0.1.0"
authors = ["Philipp Hoenisch <philipp@hoenisch.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
futures = "0.3.5"
js-sys = "0.3.42"
load-dotenv = "0.1.1"
log = "0.4.8"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0"
serde-value = "0.7"
url = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
yew = { git = "https://github.com/yewstack/yew", features = ["web_sys"] }
yewtil = { git = "https://github.com/yewstack/yew", features = ["fetch","pure"] }

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'HtmlCollection', 'Node', 'Window', "console", "Url"]
version = "0.3.4"


[dev-dependencies]
wasm-bindgen-test = "0.3"